deploy/dev/backend/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: chess-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: chess-backend
  template:
    spec:
      securityContext: {}
      containers:
        - name: chess-backend
          securityContext:
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
          image: backend-placeholder
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
